Unreleased
* Change :embed option value from false to :ids for cache_has_many for clarity

0.0.7
* Fix: Not implemented error for cache_has_one with embed: false
* Fix: cache key to change when adding a cache_has_many association with :embed => false
* Add support for non-integer primary keys
* Fix: Compatibility rails 4.1 for quote_value, which needs default column.

0.0.6
* Fix: bug where previously nil-cached attribute caches weren't expired on record creation
* Fix: cache key to not change when adding a non-embedded association.
* Perf: Rails 4 Only create CollectionProxy when using it 

0.0.5


0.0.4
* Fix: only marshal attributes, embedded associations and normalized association IDs
* Add cache version number to cache keys
* Add test case to ensure version number is updated when the marshalled format changes

0.0.3
* Fix: memoization for multi hits actually work
* Fix: quotes SELECT projection elements on cache misses
* Add CPU performance benchmark
* Fix: table names are not hardcoded anymore
* Logger now differentiates memoized vs non memoized hits

0.0.2
* Fix: Existent embedded entries will no longer raise when ActiveModel::MissingAttributeError when accessing a newly created attribute.
* Fix: Do not marshal raw AcriveRecord associations