@@ -42,47 +42,4 @@ class CacheFetchIncludesTest < IdentityCache::TestCase
       {:associated => [:deeply_associated_records]}
     ],  Item.send(:cache_fetch_includes)
   end
-
-  def test_empty_additions_for_top_level_associations_makes_no_difference
-    Item.send(:cache_has_many, :associated_records, :embed => true)
-    assert_equal [:associated_records], Item.send(:cache_fetch_includes, {})
-  end
-
-  def test_top_level_additions_are_included_in_includes
-    assert_equal [{:associated_records => []}], Item.send(:cache_fetch_includes, {:associated_records => []})
-  end
-
-  def test_top_level_additions_alongside_top_level_cached_associations_are_included_in_includes
-    Item.send(:cache_has_many, :associated_records, :embed => true)
-    assert_equal [
-      :associated_records,
-      {:polymorphic_records => []}
-    ], Item.send(:cache_fetch_includes, {:polymorphic_records => []})
-  end
-
-  def test_child_level_additions_for_top_level_cached_associations_are_included_in_includes
-    Item.send(:cache_has_many, :associated_records, :embed => true)
-    assert_equal [
-      {:associated_records => [{:deeply_associated_records => []}]}
-    ], Item.send(:cache_fetch_includes, {:associated_records => :deeply_associated_records})
-  end
-
-  def test_array_child_level_additions_for_top_level_cached_associations_are_included_in_includes
-    Item.send(:cache_has_many, :associated_records, :embed => true)
-    assert_equal [
-      {:associated_records => [{:deeply_associated_records => []}]}
-    ], Item.send(:cache_fetch_includes, {:associated_records => [:deeply_associated_records]})
-  end
-
-  def test_array_child_level_additions_for_child_level_cached_associations_are_included_in_includes
-    Item.send(:cache_has_many, :associated_records, :embed => true)
-    AssociatedRecord.send(:cache_has_many, :deeply_associated_records, :embed => true)
-    assert_equal [
-      {:associated_records => [
-        :deeply_associated_records,
-        {:record => []}
-      ]}
-    ], Item.send(:cache_fetch_includes, {:associated_records => [:record]})
-  end
-
 end
